fix(compat): prevent pre-sync vanilla fallback in enchantment browser
Replace two separate volatile fields in EnchantmentInfoRegistry with a
single AtomicReference<EnchantmentInfoSnapshot> so both maps and the
syncReceived flag are published atomically, eliminating the consistency
window between two separate volatile writes (mc-shared-state Rule 4).

Add hasSyncBeenReceived() and guard EnchantmentBrowserExtractor.extract()
to return List.of() before sync lands, preventing vanilla-default flash in
recipe viewers. Trigger a per-viewer refresh from ClientPayloadHandlers
after applyFromPayload() via ViewerRefreshTrigger so correct cards appear
without requiring a manual viewer reload.

Per-viewer refresh strategy:
- EMI: EmiApi.reloadPlugins() (full reload, register() re-runs after sync)
- REI: DisplayRegistry.getInstance() remove-then-add tracked displays
- JEI: store IJeiRuntime in onRuntimeAvailable(), hideRecipes + addRecipes

Tests added:
- EnchantmentInfoRegistryTest: flag lifecycle (false→true→false) and data coherence
- EnchantmentBrowserExtractorTest: guard returns empty before sync; existing
  tests updated to call simulateVanillaSync() before extract()

Closes #101